# GPU-Fingerprinting-for-Hardware-Security

./: .gitignore  NVIDIA_GeForce_RTX_3050_4GB_Laptop_GPU_gpu_telemetry.csv  NVIDIA_GeForce_RTX_3060_Laptop_GPU_gpu_telemetry.csv  README.md  classification_results.csv  classifier.py  collect_gpu_telemetry.py  demo.py  evaluation.py  feature_extraction.py  features.csv  main.py  meta_data.csv  ml_classification.py  model_decision_tree.pkl  model_decision_tree_no_mem.pkl  model_random_forest.pkl  model_random_forest_no_mem.pkl  model_svm.pkl  model_svm_no_mem.pkl  model_xgboost.pkl  model_xgboost_no_mem.pkl  pyproject.toml
